cctp_trader/cctp_trader.h

typedef void(__cdecl *FuncPtrTradeOnFrontConnected)() ;
typedef void(__cdecl *FuncPtrTradeOnFrontDisconnected)(int nReason) ;
typedef void(__cdecl *FuncPtrTradeOnHeartBeatWarning)(int nTimeLapse) ;
typedef void(__cdecl *FuncPtrTradeOnRspAuthenticate)(CThostFtdcRspAuthenticateField* pRspAuthenticateField, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspUserLogin)(CThostFtdcRspUserLoginField* pRspUserLogin, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspUserLogout)(CThostFtdcUserLogoutField* pUserLogout, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspUserPasswordUpdate)(CThostFtdcUserPasswordUpdateField* pUserPasswordUpdate, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspTradingAccountPasswordUpdate)(CThostFtdcTradingAccountPasswordUpdateField* pTradingAccountPasswordUpdate, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspUserAuthMethod)(CThostFtdcRspUserAuthMethodField* pRspUserAuthMethod, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspGenUserCaptcha)(CThostFtdcRspGenUserCaptchaField* pRspGenUserCaptcha, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspGenUserText)(CThostFtdcRspGenUserTextField* pRspGenUserText, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspOrderInsert)(CThostFtdcInputOrderField* pInputOrder, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspParkedOrderInsert)(CThostFtdcParkedOrderField* pParkedOrder, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspParkedOrderAction)(CThostFtdcParkedOrderActionField* pParkedOrderAction, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspOrderAction)(CThostFtdcInputOrderActionField* pInputOrderAction, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQueryMaxOrderVolume)(CThostFtdcQueryMaxOrderVolumeField* pQueryMaxOrderVolume, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspSettlementInfoConfirm)(CThostFtdcSettlementInfoConfirmField* pSettlementInfoConfirm, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspRemoveParkedOrder)(CThostFtdcRemoveParkedOrderField* pRemoveParkedOrder, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspRemoveParkedOrderAction)(CThostFtdcRemoveParkedOrderActionField* pRemoveParkedOrderAction, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspExecOrderInsert)(CThostFtdcInputExecOrderField* pInputExecOrder, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspExecOrderAction)(CThostFtdcInputExecOrderActionField* pInputExecOrderAction, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspForQuoteInsert)(CThostFtdcInputForQuoteField* pInputForQuote, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQuoteInsert)(CThostFtdcInputQuoteField* pInputQuote, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspQuoteAction)(CThostFtdcInputQuoteActionField* pInputQuoteAction, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
typedef void(__cdecl *FuncPtrTradeOnRspBatchOrderAction)(CThostFtdcInputBatchOrderActionField* pInputBatchOrderAction, CThostFtdcRspInfoField* pRspInfo, int nRequestID, bool bIsLast) ;
    API_EXPORT int ReqQryContractBank(void* trader, CThostFtdcQryContractBankField* pQryContractBank, int nRequestID);
    API_EXPORT int ReqQryParkedOrder(void* trader, CThostFtdcQryParkedOrderField* pQryParkedOrder, int nRequestID);
    API_EXPORT int ReqQryParkedOrderAction(void* trader, CThostFtdcQryParkedOrderActionField* pQryParkedOrderAction, int nRequestID);
    API_EXPORT int ReqQryTradingNotice(void* trader, CThostFtdcQryTradingNoticeField* pQryTradingNotice, int nRequestID);
    API_EXPORT int ReqQryBrokerTradingParams(void* trader, CThostFtdcQryBrokerTradingParamsField* pQryBrokerTradingParams, int nRequestID);
    API_EXPORT int ReqQryBrokerTradingAlgos(void* trader, CThostFtdcQryBrokerTradingAlgosField* pQryBrokerTradingAlgos, int nRequestID);
    API_EXPORT int ReqQueryCFMMCTradingAccountToken(void* trader, CThostFtdcQueryCFMMCTradingAccountTokenField* pQueryCFMMCTradingAccountToken, int nRequestID);
    API_EXPORT int ReqFromBankToFutureByFuture(void* trader, CThostFtdcReqTransferField* pReqTransfer, int nRequestID);
    API_EXPORT int ReqFromFutureToBankByFuture(void* trader, CThostFtdcReqTransferField* pReqTransfer, int nRequestID);
    API_EXPORT int ReqQueryBankAccountMoneyByFuture(void* trader, CThostFtdcReqQueryAccountField* pReqQueryAccount, int nRequestID);
    API_EXPORT void RegisterTradeFPOnFrontConnected(void* trader, FuncPtrTradeOnFrontConnected fp);
    API_EXPORT void RegisterTradeFPOnFrontDisconnected(void* trader, FuncPtrTradeOnFrontDisconnected fp);
    API_EXPORT void RegisterTradeFPOnHeartBeatWarning(void* trader, FuncPtrTradeOnHeartBeatWarning fp);
    API_EXPORT void RegisterTradeFPOnRspAuthenticate(void* trader, FuncPtrTradeOnRspAuthenticate fp);
    API_EXPORT void RegisterTradeFPOnRspUserLogin(void* trader, FuncPtrTradeOnRspUserLogin fp);
    API_EXPORT void RegisterTradeFPOnRspUserLogout(void* trader, FuncPtrTradeOnRspUserLogout fp);
    API_EXPORT void RegisterTradeFPOnRspUserPasswordUpdate(void* trader, FuncPtrTradeOnRspUserPasswordUpdate fp);
    API_EXPORT void RegisterTradeFPOnRspTradingAccountPasswordUpdate(void* trader, FuncPtrTradeOnRspTradingAccountPasswordUpdate fp);
    API_EXPORT void RegisterTradeFPOnRspUserAuthMethod(void* trader, FuncPtrTradeOnRspUserAuthMethod fp);
    API_EXPORT void RegisterTradeFPOnRspGenUserCaptcha(void* trader, FuncPtrTradeOnRspGenUserCaptcha fp);
    API_EXPORT void RegisterTradeFPOnRspGenUserText(void* trader, FuncPtrTradeOnRspGenUserText fp);
    API_EXPORT void RegisterTradeFPOnRspOrderInsert(void* trader, FuncPtrTradeOnRspOrderInsert fp);
    API_EXPORT void RegisterTradeFPOnRspParkedOrderInsert(void* trader, FuncPtrTradeOnRspParkedOrderInsert fp);
    API_EXPORT void RegisterTradeFPOnRspParkedOrderAction(void* trader, FuncPtrTradeOnRspParkedOrderAction fp);
    API_EXPORT void RegisterTradeFPOnRspOrderAction(void* trader, FuncPtrTradeOnRspOrderAction fp);
    API_EXPORT void RegisterTradeFPOnRspQueryMaxOrderVolume(void* trader, FuncPtrTradeOnRspQueryMaxOrderVolume fp);
    API_EXPORT void RegisterTradeFPOnRspSettlementInfoConfirm(void* trader, FuncPtrTradeOnRspSettlementInfoConfirm fp);
    API_EXPORT void RegisterTradeFPOnRspRemoveParkedOrder(void* trader, FuncPtrTradeOnRspRemoveParkedOrder fp);
    API_EXPORT void RegisterTradeFPOnRspRemoveParkedOrderAction(void* trader, FuncPtrTradeOnRspRemoveParkedOrderAction fp);
    API_EXPORT void RegisterTradeFPOnRspExecOrderInsert(void* trader, FuncPtrTradeOnRspExecOrderInsert fp);
    API_EXPORT void RegisterTradeFPOnRspExecOrderAction(void* trader, FuncPtrTradeOnRspExecOrderAction fp);
    API_EXPORT void RegisterTradeFPOnRspForQuoteInsert(void* trader, FuncPtrTradeOnRspForQuoteInsert fp);
    API_EXPORT void RegisterTradeFPOnRspQuoteInsert(void* trader, FuncPtrTradeOnRspQuoteInsert fp);
    API_EXPORT void RegisterTradeFPOnRspQuoteAction(void* trader, FuncPtrTradeOnRspQuoteAction fp);
    API_EXPORT void RegisterTradeFPOnRspBatchOrderAction(void* trader, FuncPtrTradeOnRspBatchOrderAction fp);