CSharpCtp/TraderDllWrapper.cs

        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryContractBank",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryContractBank(IntPtr phandler, ref CThostFtdcQryContractBankField pQryContractBank, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryParkedOrder",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryParkedOrder(IntPtr phandler, ref CThostFtdcQryParkedOrderField pQryParkedOrder, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryParkedOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryParkedOrderAction(IntPtr phandler, ref CThostFtdcQryParkedOrderActionField pQryParkedOrderAction, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryTradingNotice",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryTradingNotice(IntPtr phandler, ref CThostFtdcQryTradingNoticeField pQryTradingNotice, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryBrokerTradingParams",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryBrokerTradingParams(IntPtr phandler, ref CThostFtdcQryBrokerTradingParamsField pQryBrokerTradingParams, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryBrokerTradingAlgos",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryBrokerTradingAlgos(IntPtr phandler, ref CThostFtdcQryBrokerTradingAlgosField pQryBrokerTradingAlgos, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQueryCFMMCTradingAccountToken",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQueryCFMMCTradingAccountToken(IntPtr phandler, ref CThostFtdcQueryCFMMCTradingAccountTokenField pQueryCFMMCTradingAccountToken, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqFromBankToFutureByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqFromBankToFutureByFuture(IntPtr phandler, ref CThostFtdcReqTransferField pReqTransfer, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqFromFutureToBankByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqFromFutureToBankByFuture(IntPtr phandler, ref CThostFtdcReqTransferField pReqTransfer, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQueryBankAccountMoneyByFuture",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQueryBankAccountMoneyByFuture(IntPtr phandler, ref CThostFtdcReqQueryAccountField pReqQueryAccount, int nRequestID);
        

        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnFrontConnected",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnFrontConnectedCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnFrontConnectedDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnFrontDisconnected",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnFrontDisconnectedCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnFrontDisconnectedDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnHeartBeatWarning",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnHeartBeatWarningCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnHeartBeatWarningDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspAuthenticate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspAuthenticateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspAuthenticateDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspUserLogin",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspUserLoginCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspUserLoginDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspUserLogout",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspUserLogoutCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspUserLogoutDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspUserPasswordUpdate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspUserPasswordUpdateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspUserPasswordUpdateDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspTradingAccountPasswordUpdate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspTradingAccountPasswordUpdateCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspTradingAccountPasswordUpdateDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspUserAuthMethod",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspUserAuthMethodCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspUserAuthMethodDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspGenUserCaptcha",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspGenUserCaptchaCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspGenUserCaptchaDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspGenUserText",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspGenUserTextCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspGenUserTextDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspOrderInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspOrderInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspOrderInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspParkedOrderInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspParkedOrderInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspParkedOrderInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspParkedOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspParkedOrderActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspParkedOrderActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspOrderActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspOrderActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQueryMaxOrderVolume",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQueryMaxOrderVolumeCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQueryMaxOrderVolumeDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspSettlementInfoConfirm",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspSettlementInfoConfirmCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspSettlementInfoConfirmDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspRemoveParkedOrder",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspRemoveParkedOrderCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspRemoveParkedOrderDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspRemoveParkedOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspRemoveParkedOrderActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspRemoveParkedOrderActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspExecOrderInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspExecOrderInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspExecOrderInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspExecOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspExecOrderActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspExecOrderActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspForQuoteInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspForQuoteInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspForQuoteInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQuoteInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQuoteInsertCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQuoteInsertDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspQuoteAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspQuoteActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspQuoteActionDelegate callback);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "RegisterTradeFPOnRspBatchOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void RegisterOnRspBatchOrderActionCallback(IntPtr phandler,  [MarshalAs(UnmanagedType.FunctionPtr)]OnRspBatchOrderActionDelegate callback);
